# scorner

./: LICENSE  README.md  ReadMe.md  pyproject.toml
src/: scorner.py
src/scorner/: MC_chain_data.npy  demo.ipynb  demo.py
src/scorner_scurran/: scorner.py
